fix jump issue in the about page

--- a/src/components/LandingPage/AboutMe/AboutMe.module.css
+++ b/src/components/LandingPage/AboutMe/AboutMe.module.css
@@ -64,7 +64,6 @@
 
   border-top: 1px solid #222229;
   border-bottom: 1px solid #222229;
-  border: 1px solid red;
 }
 
 .imageWrapper {
@@ -73,7 +72,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid blue;
+}
+
+.imageWrapper2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .imageWrapper img {
@@ -88,7 +94,6 @@
   justify-content: center;
   align-items: flex-start;
   gap: 202px;
-  border: 1px solid green;
 }
 
 .aboutContainer .aboutWrapper:last-child {
